...
    <string name="whipped_cream_label">Whipped Cream</string>
    <string name="order_button_label">Place Order</string>
    <string name="large_radio_label">20oz</string>
    <string name="small_radio_label">16oz</string>
    <string name="almond_milk_checkbox_label">Almond Milk</string>
    <string name="shot_spinner_prompt">Select number of shots</string>
    <string name="remove_button_label">Remove</string>
    <string name="item_removed">Removed from cart!</string>
    <string name="add_to_cart_button_label">Add to cart</string>
    <string name="special_instructions_text">\u0020 Special Instructions</string>
    <string name="save_as_favorite_button_label">Save Favorite</string>
    <string name="remove_from_favorites_button_label">Remove</string>
    <string name="favorite_removed">Removed from favorites!</string>

    <string name="shopping_cart">Shopping Cart</string>
    <string name="coffee_menu">Menu</string>
    <string name="favorited_menu">Favorites</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="order_total">Total: $</string>
    <string name="item_added">Placed in cart!</string>
    <string name="order_placed">Your order will be ready soon!</string>
    <string name="cart_empty">You must add something to the cart first</string>
...
