...
                                             android:layout_height="match_parent"
                                             android:layout_margin="16dp"
                                             android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cart_recycler_view"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/order_total_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
...
