...
        android:hint="@string/special_instructions_text"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:background="@layout/edittext_border_test"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_whipped" />

    <LinearLayout
        android:id="@+id/linearLayout"
...
                android:layout_marginRight="8dp"
                android:text="@string/add_to_cart_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageButton
                android:id="@+id/save_as_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
...
